--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@angular/forms": "7.1.4",
     "@angular/http": "7.1.4",
     "@angular/language-service": "7.1.4",
+    "@angular/material": "^7.2.1",
     "@angular/platform-browser": "7.1.4",
     "@angular/platform-browser-dynamic": "7.1.4",
     "@angular/router": "7.1.4",
