--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "dependencies": {},
   "devDependencies": {
     "@angular-devkit/build-angular": "0.11.4",
+    "@angular/animations": "^7.2.0",
+    "@angular/cdk": "^7.2.1",
     "@angular/cli": "7.1.4",
     "@angular/common": "7.1.4",
     "@angular/compiler": "7.1.4",
@@ -63,6 +65,7 @@
     "electron": "4.0.0",
     "electron-builder": "20.36.2",
     "electron-reload": "1.3.0",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "3.1.1",
