--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "angular-electron": {
+        "cliply": {
             "root": "",
             "sourceRoot": "src",
             "projectType": "application",
@@ -75,21 +75,21 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "angular-electron:build"
+                        "browserTarget": "cliply:build"
                     },
                     "configurations": {
                         "dev": {
-                            "browserTarget": "angular-electron:build:dev"
+                            "browserTarget": "cliply:build:dev"
                         },
                         "production": {
-                            "browserTarget": "angular-electron:build:production"
+                            "browserTarget": "cliply:build:production"
                         }
                     }
                 },
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "angular-electron:build"
+                        "browserTarget": "cliply:build"
                     }
                 },
                 "test": {
@@ -127,7 +127,7 @@
                 }
             }
         },
-        "angular-electron-e2e": {
+        "cliply-e2e": {
             "root": "e2e",
             "projectType": "application",
             "architect": {
@@ -135,7 +135,7 @@
                     "builder": "@angular-devkit/build-angular:protractor",
                     "options": {
                         "protractorConfig": "e2e/protractor.conf.js",
-                        "devServerTarget": "angular-electron:serve"
+                        "devServerTarget": "cliply:serve"
                     }
                 },
                 "lint": {
@@ -152,7 +152,7 @@
             }
         }
     },
-    "defaultProject": "angular-electron",
+    "defaultProject": "cliply",
     "schematics": {
         "@schematics/angular:component": {
             "prefix": "app",
