--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,12 +1,15 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "module": "es2015",
-    "baseUrl": "",
-    "types": []
-  },
-  "exclude": [
-    "**/*.spec.ts"
-  ]
+    "extends": "../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "../out-tsc/app",
+        "module": "es2015",
+        "strictNullChecks": true,
+        "strictPropertyInitialization": true,
+        "strictNullChecks": false,
+        "baseUrl": "",
+        "types": []
+    },
+    "exclude": [
+        "**/*.spec.ts"
+    ]
 }
