--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@ngx-translate/http-loader": "4.0.0",
         "@types/cors": "^2.8.4",
         "@types/express": "^4.16.1",
+        "@types/fluent-ffmpeg": "^2.1.9",
         "@types/jasmine": "2.8.7",
         "@types/jasminewd2": "2.0.3",
         "@types/node": "8.9.4",
@@ -69,6 +70,7 @@
         "electron-builder": "20.36.2",
         "electron-reload": "1.3.0",
         "express": "^4.16.4",
+        "fluent-ffmpeg": "^2.1.2",
         "hammerjs": "^2.0.8",
         "jasmine-core": "3.3.0",
         "jasmine-spec-reporter": "4.2.1",
