Add app-root-dir to safely load ffmpeg binaries

--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
         "@angular/router": "7.1.4",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
+        "@types/app-root-dir": "^0.1.0",
         "@types/cors": "^2.8.4",
         "@types/express": "^4.16.1",
         "@types/fluent-ffmpeg": "^2.1.9",
         "@types/jasmine": "2.8.7",
         "@types/jasminewd2": "2.0.3",
         "@types/node": "8.9.4",
+        "app-root-dir": "^1.0.2",
         "codelyzer": "4.5.0",
         "conventional-changelog-cli": "2.0.11",
         "core-js": "2.6.1",
