--- a/package.json
+++ b/package.json
@@ -37,22 +37,21 @@
         "e2e": "npm run postinstall:web && ng e2e",
         "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
     },
-    "dependencies": {},
     "devDependencies": {
         "@angular-devkit/build-angular": "0.11.4",
         "@angular/animations": "^7.2.0",
         "@angular/cdk": "^7.2.1",
         "@angular/cli": "7.1.4",
         "@angular/common": "7.1.4",
-        "@angular/compiler": "7.1.4",
         "@angular/compiler-cli": "7.1.4",
+        "@angular/compiler": "7.1.4",
         "@angular/core": "7.1.4",
         "@angular/forms": "7.1.4",
         "@angular/http": "7.1.4",
         "@angular/language-service": "7.1.4",
         "@angular/material": "^7.2.1",
-        "@angular/platform-browser": "7.1.4",
         "@angular/platform-browser-dynamic": "7.1.4",
+        "@angular/platform-browser": "7.1.4",
         "@angular/router": "7.1.4",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
@@ -62,25 +61,27 @@
         "@types/fluent-ffmpeg": "^2.1.9",
         "@types/jasmine": "2.8.7",
         "@types/jasminewd2": "2.0.3",
+        "@types/lodash": "^4.14.123",
         "@types/node": "8.9.4",
         "app-root-dir": "^1.0.2",
         "codelyzer": "4.5.0",
         "conventional-changelog-cli": "2.0.11",
         "core-js": "2.6.1",
         "cors": "^2.8.5",
-        "electron": "4.0.0",
         "electron-builder": "20.36.2",
         "electron-reload": "1.3.0",
+        "electron": "4.0.0",
         "express": "^4.16.4",
         "fluent-ffmpeg": "^2.1.2",
         "hammerjs": "^2.0.8",
         "jasmine-core": "3.3.0",
         "jasmine-spec-reporter": "4.2.1",
-        "karma": "3.1.1",
         "karma-chrome-launcher": "2.2.0",
         "karma-coverage-istanbul-reporter": "2.0.4",
-        "karma-jasmine": "2.0.1",
         "karma-jasmine-html-reporter": "1.4.0",
+        "karma-jasmine": "2.0.1",
+        "karma": "3.1.1",
+        "lodash": "^4.17.11",
         "npm-run-all": "4.1.5",
         "protractor": "5.4.1",
         "rxjs": "6.3.3",
